GearsetPOC/force-app/main/default/objects/SalesforceMemberTierDowngradeImmunity__x/SalesforceMemberTierDowngradeImmunity__x.object-meta.xml
<CustomObject>
    <description>SalesforceMemberTierDowngradeImmunity</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceMemberTierDowngradeImmunity</externalName>
    <label>Downgrade immunity</label>
    <pluralLabel>Downgrade immunities</pluralLabel>
</CustomObject>