GearsetPOC/force-app/main/default/objects/SalesforceMemberTierDowngradeImmunity__x/fields/NumberOfRenewals__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRenewals__c</fullName>
    <description>NumberOfRenewals</description>
    <externalDeveloperName>NumberOfRenewals</externalDeveloperName>
    <label>Number of renewals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>