GearsetPOC/force-app/main/default/objects/SalesforceMemberTierDowngradeImmunity__x/fields/NumberOfRenewalsRemaining__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRenewalsRemaining__c</fullName>
    <description>NumberOfRenewalsRemaining</description>
    <externalDeveloperName>NumberOfRenewalsRemaining</externalDeveloperName>
    <label>Number of renewals remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>