GearsetPOC/force-app/main/default/objects/SalesforceMemberTierDowngradeImmunity__x/fields/UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDate__c</fullName>
    <description>UpdatedDate</description>
    <externalDeveloperName>UpdatedDate</externalDeveloperName>
    <label>Updated date</label>
    <type>DateTime</type>
</CustomField>